examples/components/error/error-summary-page.njk
{% from "components/alerts/alerts.njk" import alert as alert %}
{% from "components/form/controls/text-input.njk" import textinput as textinput %}
{% from "components/form/controls/date-input.njk" import datoinput as datoinput %}
{% from "components/checkboxes/checkboxes.njk" import checkboxes as checkboxes %}

{{ alert(alert_example) }}
<h1 id="oplysninger-om-dig">Oplysninger om dig</h1>
<form novalidate>

    {{textinput(textinput_example)}}

    {{checkboxes(checkbox_error_example)}}

    {{datoinput(dateObject)}}

</form>

